# melissa

melissa-api/: .env  .env.example  pyproject.toml  readme.md
melissa-api/src/: main.py
melissa-api/src/melissa_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
melissa-api/src/routes/: artifacts.py  compile.py  devices.py  health.py  link.py  strategies.py
melissa-api/src/schemas/: indicators.schema.json  orders.schema.json
melissa-api/src/services/: signer.py  validator.py
melissa-api/src/storage/: devrepo.py  fsrepo.py  safe.py
melissa-api/storage_data/devices/: 19f77313-90a3-4a56-8610-89c8dd4a6a7a.json  67d20bd0-16cf-4812-b832-d5c355de7f9c.json  724c6ca8-d2de-4070-a084-0da5b1e93310.json  7c145cad-8d5f-4367-9420-1e6e346c0955.json  879df080-5b5f-4e97-afc6-3b5e446c98c6.json  93637005-b382-4fe5-902f-38b22163db76.json  d919a190-5bdf-476d-a189-da9d4019b5e1.json  f0d515cc-4c63-4047-95e1-706bbc50d566.json  f653d1bb-0bf1-432a-8dab-041718adf93e.json
melissa-api/storage_data/links/: 6052-7440.json  65E6-4FAA.json  8CCE-C8C7.json  B811-B805.json  BD61-0E19.json
melissa-api/storage_data/strategies/: 0b03ea3a-a32b-4749-9c1c-c7f37fe9419d.json  bc28f1b5-c8f4-4c1d-ac44-7aea8e9b4681.json  f68c8d3b-9867-4c38-96b9-9f3aae7d2ef3.json  f83192da-d1a3-4821-b589-8a8fd479a984.json
melissa-engine/: melissa.yaml  pyproject.toml
melissa-engine/melissa_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
melissa-engine/schemas/: manifest.schema.json  rules.schema.json
melissa-engine/src/: cli.py
melissa-engine/src/core/: schema.py  state.py  verify.py
(+6 files in other folders)
